Set z-index of header and iframe to fix weird overlap issue

--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ header {
   position: fixed;
   -webkit-box-shadow: 0px 2px 7px 2px rgba(0,0,0,0.24);
   box-shadow: 0px 2px 7px 2px rgba(0,0,0,0.24);
+  z-index: 2;
 }
 
 #header {
@@ -135,6 +136,26 @@ figcaption {
   padding: 3px;
 }
 
+#about-vid-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+#video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+#about-vid-container figcaption {
+  position: relative;
+}
+
 footer {
   background-color: #045474;
   color: #fff;
@@ -175,24 +196,7 @@ input, textarea {
   border-radius: 2px;
 }
 
-#about-vid-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-}
 
-#video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#about-vid-container figcaption {
-  position: relative;
-}
 
 
 /* Desktop */
